Avoid ugly link color in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   }
 
   a {
-    @apply active:text-[#aaa];
+    @apply active:text-[#aaa] dark:text-inherit;
   }
 
   blockquote {
